[tool.poetry]
name = "ods_channel_stats_eda"
version = "0.1.0"
description = "Public analysis of ODS Channel questionnaire statistics"
authors = ["ODS community"]
license = "GNU Lesser General Public License v3.0 or later"

[tool.poetry.dependencies]
python = "^3.6.6"
jupyter = "^1.0.0"
pandas = "^1.0.1"
seaborn = "^0.10.0"
wordcloud = "^1.6.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
